methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:98: error: method growJardinier overrides nothing
override def growJardinier() {
             ^